  * Documentation: typec.rst: Use literal-block element with ascii art
  * Documentation: Update references to drivers/base/firmware_class.c
  * [armhf] Enable MTD_NAND_MARVELL as module, replacing MTD_NAND_PXA3xx
  * linux-kbuild: Update genksyms makefile to run flex and bison
  * Add support for building only versioned tools packages

  [ Luca Boccassi ]
  * Build-Dep on libelf-dev even for nopython/notools builds to fix FTBFS,
    needed when CONFIG_STACK_VALIDATION and CONFIG_UNWINDER_ORC are enabled.

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Apr 2018 21:37:24 +0100

linux (4.16.5-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.1
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.2
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.3
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.4
    - ext4: limit xattr size to INT_MAX (CVE-2018-1095)
    - random: fix crng_ready() test (CVE-2018-1108)
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.16.5

  [ Ben Hutchings ]
  * aufs: gen-patch: Fix Subject generation to skip SPDX-License-Identifier
  * aufs: Update support patchset to aufs4.16-20180409 (no functional change)
  * wireless: Add Debian wireless-regdb certificates (see #892229)
  * Add support for compilers installed outside the default PATH
  * linux-headers: Change linux-kbuild dependency to be versioned
  * Set ABI to 1
  * [x86,arm64] Disable code signing for upload to unstable
  * debian/lib/python/debian_linux/debian.py: Fix binNMU changelog parsing
  * debian/lib/python/debian_linux/debian.py: Fix binNMU revision parsing
  * xfs: enhance dinode verifier (CVE-2018-10322)
  * xfs: set format back to extents if xfs_bmap_extents_to_btree
    (CVE-2018-10323)
  * udeb: Add algif_skcipher to crypto-modules (Closes: #896968)
  * ext4: fix bitmap position validation (fixes regression in 4.15.17-1)