@@ -1,4 +1,4 @@
-Package: @source_package@-source-@version@
+Package: @source_basename@-source-@version@
 Build-Profiles: <!stage1>
 Architecture: all
 Section: kernel
@@ -13,7 +13,7 @@ Description: Linux kernel source for version @version@ with Debian patches
  features that have already been (or are believed to be) accepted by the
  upstream maintainers.
 
-Package: @source_package@-support-@abiname@
+Package: @source_basename@-support-@abiname@
 Build-Profiles: <!stage1>
 Architecture: all
 Section: devel
