@@ -13,6 +13,7 @@ linux (4.17~rc2-1~exp1) UNRELEASED; urgency=medium
   * [armhf] Enable MTD_NAND_MARVELL as module, replacing MTD_NAND_PXA3xx
   * linux-kbuild: Update genksyms makefile to run flex and bison
   * Add support for building only versioned tools packages
+  * Change generation of linux-doc, linux-source, linux-support package names
 
   [ Luca Boccassi ]
   * Build-Dep on libelf-dev even for nopython/notools builds to fix FTBFS,
